--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,17 +1,28 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: backend-ingress
+  name: backend-ingress # You can also name it devops-ingress for clarity if you wish
+  namespace: devops-k8s # Explicitly define the namespace for clarity
 spec:
-  ingressClassName: nginx
+  ingressClassName: nginx # This is confirmed to be correct!
   rules:
     - host: devops.local
       http:
         paths:
-          - path: /api
+          # Rule for the Backend API
+          - path: /api(/|$)(.*) # This regex matches /api, /api/, and /api/anything
             pathType: Prefix
             backend:
               service:
                 name: backend-service
                 port:
-                  number: 80
+                  number: 80 # This is the port your backend-service exposes
+
+          # Rule for the Frontend Application (catch-all for all other paths)
+          - path: /(.*) # This matches all other paths (e.g., /, /login, /about)
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-service
+                port:
+                  number: 80 # This is the port your frontend-service exposes
