--- a/devops-academy-website/Dockerfile.client
+++ b/devops-academy-website/Dockerfile.client
@@ -1,43 +1,49 @@
-# Dockerfile.server - Combined Backend & Frontend Image
+# Dockerfile.client
 
-# Stage 1: Build the application
-FROM oven/bun:1.1.18-alpine AS builder
+# Stage 1: Build the frontend
+FROM oven/bun:1.1.18-alpine AS frontend_builder
+
+# Set working directory inside the container to /app
+# This is the root of your project where package.json, vite.config.ts, tsconfig.json reside
 WORKDIR /app
 
-# Copy lockfiles first for caching
+# Copy package.json and bun.lock for dependency installation
 COPY package.json bun.lock ./
 
-# Install dependencies (including devDependencies)
+# Install dependencies
+# Using --frozen-lockfile for consistent builds
 RUN --mount=type=cache,target=/root/.bun/install/cache bun install --frozen-lockfile
 
-# Copy the full source code
-COPY . .
+# Copy project configuration files (vite.config.ts, tsconfig.json)
+# These are at the root level of your project (devops-academy-website/)
+COPY vite.config.ts tsconfig.json ./
 
-# Build backend (TypeScript)
-RUN bun run build
+# Copy the client application source code
+# The client folder is copied into /app/client
+COPY client ./client
 
-# Build frontend (Vite)
-WORKDIR /app/client
+# Build the frontend application
+# Vite will run from /app and use vite.config.ts located at /app.
+# Inside vite.config.ts, the 'root' is set to 'client', which will correctly point to /app/client as the source root.
 RUN bunx vite build
 
-# Stage 2: Production image
-FROM node:20-alpine
-WORKDIR /app
+# Stage 2: Serve the compiled frontend static files with Nginx
+FROM nginx:alpine
 
-# Copy only production dependencies
-COPY --from=builder /app/node_modules ./node_modules
+# Remove default Nginx configuration (if you're providing your own)
+RUN rm /etc/nginx/conf.d/default.conf
 
-# Copy compiled backend (includes server/index.js and routes)
-COPY --from=builder /app/dist ./dist
+# Copy custom Nginx configuration
+# IMPORTANT: You need an 'nginx.conf' file in your 'devops-academy-website' directory for this to work.
+# If you don't have one, create a basic one (example provided below).
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copy frontend static files into public dir
-COPY --from=builder /app/dist/server/public ./dist/server/public
+# Copy the build output from the builder stage to Nginx's serving directory
+# The output directory is '/app/dist/server/public' based on your vite.config.ts 'outDir' setting.
+COPY --from=frontend_builder /app/dist/server/public /usr/share/nginx/html
 
-# Copy package.json (optional but useful)
-COPY package.json ./
+# Expose port 80
+EXPOSE 80
 
-# Expose the backend port
-EXPOSE 5000
-
-# Start backend server
-CMD ["node", "dist/server/index.js"]
+# Start Nginx
+CMD ["nginx", "-g", "daemon off;"]
