--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -8,4 +8,5 @@ spec:
   ports:
   - protocol: TCP
     port: 80
-    targetPort: 3000
+    targetPort: 80 # <--- CHANGE THIS TO 80 (matches new containerPort)
+  type: ClusterIP # Ensure this is ClusterIP
