--- a/devops-academy-website/tsconfig.json
+++ b/devops-academy-website/tsconfig.json
@@ -5,14 +5,14 @@
     "incremental": true,
     "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
     "noEmit": true,
-    "strict": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
-    "target": "ESNext",
+    "strict": true,
     "lib": ["esnext", "dom", "dom.iterable"],
     "jsx": "preserve",
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "allowImportingTsExtensions": true,
+    "moduleResolution": "bundler",
     "baseUrl": ".",
     "types": ["node", "vite/client"],
     "paths": {
