--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: devops.local
+    - host: argocd.local
       http:
         paths:
           - path: /api(/|$)(.*)
