--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -1,3 +1,4 @@
+# k8s/frontend-service.yaml - UPDATED
 apiVersion: v1
 kind: Service
 metadata:
@@ -8,5 +9,5 @@ spec:
   ports:
   - protocol: TCP
     port: 80
-    targetPort: 80 # <--- CHANGE THIS TO 80 (matches new containerPort)
+    targetPort: 80 # Changed to 80 (matches new containerPort)
   type: ClusterIP # Ensure this is ClusterIP
